--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@
 }
 
 .main__content p {
-    margin-top: 1rem;
+    margin: 1rem 0;
     font-size: 2rem;
     font-weight: 700;
     color: #fff;
