--- a/styles.css
+++ b/styles.css
@@ -482,6 +482,12 @@
     font-size: 2rem;
 }
 
+.footer__logo {
+    margin-right: 0.5rem;
+    width: 30%;
+    height: 30%;
+}
+
 .footer__links {
     width: 100%;
     max-width: 1000px;
@@ -529,6 +535,7 @@
 .social__icon--link {
     color: #fff;
     font-size: 24px;
+    text-decoration: none;
 }
 
 .social__media {
@@ -552,7 +559,6 @@
     width: 240px;
 }
 
-/*
 .social__logo {
     color: #fff;
     justify-self: flex-start;
@@ -564,7 +570,10 @@
     align-items: center;
     margin-bottom: 16px;
 }
-*/
+
+.fa-gem {
+    margin-right: 0.5rem;
+}
 
 @media screen and (max-width: 820px) {
     .footer__links {
