--- a/mystyles.css
+++ b/mystyles.css
@@ -101,7 +101,7 @@
 
 @media screen and (max-width: 968px) {
     .navbar__toggle {
-        display: red;
+        display: block;
         position: absolute;
         right: 20px;
         top: 50%; 
@@ -112,7 +112,6 @@
         border: none;
         background: none;
         cursor: pointer;
-        padding: 0px;
+        padding: 0;
     }
 }
-
