--- a/styles.css
+++ b/styles.css
@@ -462,7 +462,7 @@
 }
 
 .footer__container {
-    background-color: ##2A9875;
+    background-color: #2A9875;
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
