--- a/styles.css
+++ b/styles.css
@@ -502,7 +502,7 @@
     align-items: flex-start;
     margin: 16px;
     text-align: left;
-    width: 160px;
+    width: 100%;
     box-sizing: border-box;
 }
 
